Update implementation for filtering accounts